--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-figtree), Arial, Helvetica, sans-serif;
+}
+
+.merriweather{
+  font-family: var(--font-merriweather), Arial, Helvetica, sans-serif;;
 }
