--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,12 @@ body {
 body::-webkit-scrollbar {
   display: none;  
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
